# unet_segmentation_metrics

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
notebooks/: unet_segmentation_metrics-napari.ipynb  unet_segmentation_metrics.ipynb
segmetrics/: core.py  metrics.py  render.py
src/umetrics/: __init__.py  core.py  render.py
src/umetrix/: core.py  notebooks.py  render.py
tests/: conftest.py  test_metrics.py
tests/data/: unet.tif
umetrics/: core.py  render.py
